# OmniDevice

./: Cargo.toml  README.md
aglio/: Cargo.toml
aglio/src/: lib.rs
cli/: Cargo.toml
cli/src/: device.rs  main.rs  options.rs  routes.rs
cli/src/device/: messages.rs
cli/src/routes/: uuid.rs  ws.rs
