[package]
name = "OmnAIScope-DataServer-Rust"
version = "0.1.0"
edition = "2024"

[dependencies]
rusb = "0.9.4"
anyhow = "1"

clap = "4.5.37"
clap_derive = "4.5.32"

uuid = { version = "1", features = ["serde"] }

tokio = "1"
rocket = "0.5.1"
rocket_ws = "0.1.1"

serde = "1"
serde_with = { version = "3" , features = ["json"]}
serde_derive = "1"
serde_json = "1"
aglio = { path = "../aglio"}
chrono = {version = "0.4.41", features = ["serde"]}
